ClickAnimations in Drawer

--- a/app/src/main/Assets/main.html
+++ b/app/src/main/Assets/main.html
@@ -24,11 +24,11 @@
                 <img class="drawericon" src="images/ic_bike.png" />
                 <h1>Super Fit</h1>
             </div>
-            <div id="tracks" class="drawerButton">
+            <div id="tracks" class="drawerButton mobilekit-click-animation tracks">
                 <span id="tracksMarker" class="marker">◢</span>
                 <span class="tracksTitle">Tracks</span>
             </div>
-            <ul id=trackList></ul>
+            <ul id=trackList class="mobilekit-click-animation-children trackList"></ul>
         </div>
     </template>
 
