--- a/app/src/main/Assets/main.html
+++ b/app/src/main/Assets/main.html
@@ -16,6 +16,7 @@
     <button class="starter button mobilekit-click-animation" disabled>Start</button>
     <button class="display button mobilekit-click-animation" disabled>Display</button>
     <div class="filler"></div>
+    <button class="resetter button mobilekit-click-animation" disabled>Reset</button>
     <button class="stopper button mobilekit-click-animation" disabled>Stop</button>
 
     <template id="mobilekit-drawer-content">
