Delete gpx tracks

--- a/app/src/main/Assets/mapViewControls.html
+++ b/app/src/main/Assets/mapViewControls.html
@@ -12,8 +12,15 @@
         <img id="switcher" src="images/listBlack.png">
     </div>
     <div class="dialog hidden">
-        <button id="delete" >Löschen</button>
-        <button id="save" >Sichern</button>
+        <button id="delete" >
+            <img src="images/delete.svg">
+        </button>
+        <button id="load" >
+            <img src="images/track.svg">
+        </button>
+        <button id="save" >
+            <img src="images/content-save.svg">
+        </button>
     </div>
     
     <script src="scripts/mapviewControls.js"></script>
