Navigation header with menu

--- a/app/src/main/Assets/main.html
+++ b/app/src/main/Assets/main.html
@@ -41,7 +41,7 @@
     <template id="mapTemplate">
         <li>
             <div class="map title">
-                <!-- <img src="images/track.svg" class="trackIcon">
+                <!-- <img src="images/track.xml" class="trackIcon">
                 <div>
                     <div class="title">
                     </div>
