Tracks.html with ripple animation

--- a/app/src/main/assets/display.html
+++ b/app/src/main/assets/display.html
@@ -15,7 +15,7 @@
 
     <template id="display">
         <div>
-            <scroller>
+            <scroller :showscrollbar="false" class="displayContainer">
                 <template v-slot=content>
                     <div class="display">
                         <div class="label status">
